	removed flare launcher from AH6X helicopter
	removed rocket launcher reload sound of BMP3 IFV and T90 tank
	rocket launcher reload time of BMP3 IFV and T90 tank
	shot sound of M32_heli grenade launcher

Fixed:
	[LAV-25 | LAV-25 (HQ)] driver-view, turned-out, look right back problem (http://dev.withsix.com/issues/1694)
	AK-107 model issue when fire (http://dev.withsix.com/issues/5342)
	AI can see and shoot through the walls on one side of the long white animal Shed (http://dev.withsix.com/issues/7147)
	Hind distance LOD colour (http://dev.withsix.com/issues/8198)
	locking guided missiles, AI-fired RPGs, and BMP-2 have trouble hitting LAV-25 HQ (http://dev.withsix.com/issues/62100)
	2S6M_Tunguska vehicle and BMP3 IFV IR searchlights now not glowing anymore
	AI rate of fire distance at medium range of GAU12 cannon
	BMP2_HQ, BTR90 and BTR90_HQ APCs searchlights
	BMP3 IFV rearlights position
	M1014 shotgun model issue when magazine is empty
	Pchela1T UAV model issues
	appearance of "No owner" messages in RPT file
	deleted weapons and magazines of Su34 plane gunner what pilot already has
	disabled postprocess optics effects of some iron, collimator, NV and TI sights
	"get in" vehicle sound attenuation relative to distance
	IR searchlight of T55 - now it can't light on like IRL
	rearlights of BRDM2, BRDM2_ATGM and BRDM2_HQ
	roles of control list when inserting some vehicles in editor
	turning out AI driver when player is commander of BMP2_HQ tracked APC
	the Cardboardbox DayZ bug
	some localization mistakes
	some other issues


21/12/2015

Added:
	hidden selections to An2 plane
	zeroing function to static GMG grenade launcher

Changed:
	decreased burst length of some cannons
	decreased rate of fire of GAU12 cannon
	deleted unusable discrete distances of turrets with AGS30 grenade launcher
	deleted zeroing function from LeeEnfield rifle
	reverted definitions of DMR and M4SPR rifles optical sights to original
	reverted firing angles of helicopter side gunners to original